--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
 </head>
 
 <body>
-    <h1 class="bg-red-700">hello bag</h1>
+
+    <section class="bg-center bg-no-repeat bg-cover h-[70vh] relative"
+        style="background-image: url(https://cdn.pixabay.com/photo/2022/01/07/15/49/scam-6922102_1280.png);">
+        <div class=" bg-black bg-opacity-40 absolute inset-0  left-0 top-0 w-full h-full"></div>
+        <div class="holder relative z-10">
+            <h2 class="">scamshield</h2>
+        </div>
+    </section>
+
 </body>
 
 </html>
