--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
 <body>
 
-    <section class="bg-center bg-no-repeat bg-cover h-[70vh] relative"
+    <section class="bg-center bg-no-repeat bg-cover h-[70vh] relative flex justify-center items-center"
         style="background-image: url(https://cdn.pixabay.com/photo/2022/01/07/15/49/scam-6922102_1280.png);">
         <div class=" bg-black bg-opacity-40 absolute inset-0  left-0 top-0 w-full h-full"></div>
         <div class="holder relative z-10">
-            <h2 class="">scamshield</h2>
+            <h2 class=" text-5xl font-bold text-white leading-[3.5rem] max-w-[700px] -tracking-[0.066rem] text-center">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, porro.</h2>
         </div>
     </section>
+    <!-- End of banner block -->
 
 </body>
 
