menu link added

--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
     </section>
     <!-- End of banner block -->
 
+    <section class="bg-blue-light">
+        <div class="lg:max-w-siteWidth mx-auto">
+            <div
+                class=" flex flex-col md:flex-row [&>a]:p-8 [&>a]:text-xl [&>a]:font-semibold [&>a]:tracking-[0.2px] [&>a]:leading-[22px] [&>a]:text-center [&>a]:text-white  [&>a]:cursor-pointer  divide-y-[1px] md:divide-y-0  md:divide-x-[1px] divide-blue1 [&>a:hover]:bg-blue1 [&>a]:transition [&>a]:duration-300 lg:[&>a]:flex-auto [&>a]:max-w-full">
+
+                <a href="#">Get help if you have been
+                    scammed</a>
+                <a href="#">Get help if you have been
+                    scammed</a>
+                <a href="#">Get help if you have been
+                    scammed</a>
+                <a href="#">Get help if you have been
+                    scammed</a>
+
+            </div>
+        </div>
+    </section>
+    <!-- End of menu link block -->
+
 </body>
 
 </html>
