--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         style="background-image: url(https://cdn.pixabay.com/photo/2022/01/07/15/49/scam-6922102_1280.png);">
         <div class=" bg-black bg-opacity-40 absolute inset-0  left-0 top-0 w-full h-full"></div>
         <div class="holder relative z-10">
-            <h2 class=" text-5xl font-bold text-white leading-[3.5rem] max-w-[700px] -tracking-[0.066rem] text-center">
+            <h2 class="text-white text-center max-w-[600px]">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, porro.</h2>
         </div>
     </section>
@@ -39,6 +39,36 @@
     </section>
     <!-- End of menu link block -->
 
+    <section class="block-pad pt-[100px]">
+        <div class="holder">
+            <div class="flex flex-col md:flex-row  ">
+
+                <div class="flex-none lg:w-1/2 lg:max-w-[600px]">
+                    <p class=" uppercase leading-22 tracking-1.5">win Cash Prizes & Rewards!</p>
+                    <h2 class="text-blue1 mt-5">Play and learn to enhance your personal scams resilience!</h2>
+                    <div class="mt-5 space-y-4">
+                        <p>Play #XiamTheScams from 24 Oct 2024 - 22 Jan 2025. Boost anti-scam skills in this life
+                            simulation. Make wise choices, avoid scams, and maximise well-being!</p>
+                    </div>
+                    <a href="#" class="btn flex items-center mt-6">
+                        Play Now!
+                        <svg width="2rem" height="1rem" id="root" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path
+                                d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
+                                fill="#266df1" />
+                        </svg>
+                    </a>
+                </div>
+
+                <div class="flex-none lg:w-1/2 mt-6 md:mt-0 lg:ml-auto">
+                    <img src="https://images.pexels.com/photos/7111619/pexels-photo-7111619.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                        alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    End text media block -->
 </body>
 
 </html>
