download block added

--- a/index.html
+++ b/index.html
@@ -41,16 +41,15 @@
 
     <section class="block-pad pt-[100px]">
         <div class="holder">
-            <div class="flex flex-col md:flex-row  ">
-
-                <div class="flex-none lg:w-1/2 lg:max-w-[600px]">
-                    <p class=" uppercase leading-22 tracking-1.5">win Cash Prizes & Rewards!</p>
+            <div class="flex flex-col md:flex-row">
+                <div class="flex-none lg:w-1/2 lg:max-w-[600px] space-y-5">
+                    <p class="uppercase text-base leading-22 tracking-1.5">win Cash Prizes & Rewards!</p>
                     <h2 class="text-blue1 mt-5">Play and learn to enhance your personal scams resilience!</h2>
-                    <div class="mt-5 space-y-4">
+                    <div class="space-y-4">
                         <p>Play #XiamTheScams from 24 Oct 2024 - 22 Jan 2025. Boost anti-scam skills in this life
                             simulation. Make wise choices, avoid scams, and maximise well-being!</p>
                     </div>
-                    <a href="#" class="btn flex items-center mt-6">
+                    <a href="#" class="btn flex items-center">
                         Play Now!
                         <svg width="2rem" height="1rem" id="root" xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 448 512">
@@ -62,13 +61,48 @@
                 </div>
 
                 <div class="flex-none lg:w-1/2 mt-6 md:mt-0 lg:ml-auto">
-                    <img src="https://images.pexels.com/photos/7111619/pexels-photo-7111619.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
-                        alt="">
+                    <div class="aspect-w-16 aspect-h-9">
+                        <img class="object-cover w-full h-full"
+                            src="https://images.pexels.com/photos/7111619/pexels-photo-7111619.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="">
+                    </div>
                 </div>
             </div>
+
         </div>
     </section>
     <!--    End text media block -->
+    <section class=" block-pad bg-gray1">
+        <div class="holder">
+            <p class="text-center uppercase text-base leading-22 tracking-1.5">get scam protection</p>
+            <h2 class="text-center text-blue1 mt-4">Stay safe with the enhanced ScamShield app</h2>
+
+            <div class="grid lg:grid-cols-3 gap-4 place-items-center text-center md:text-start pt-14">
+                <div class="space-y-6 max-w-[325px]">
+                    <h3>Check for scams</h3>
+                    <p>Know if a suspicious message, link, or number is likely a scam </p>
+                </div>
+                <div class="space-y-6 max-w-[325px]">
+                    <h3>Check for scams</h3>
+                    <p>Know if a suspicious message, link, or number is likely a scam </p>
+                </div>
+                <div class="space-y-6 max-w-[325px]">
+                    <h3>Check for scams</h3>
+                    <p>Know if a suspicious message, link, or number is likely a scam </p>
+                </div>
+            </div>
+
+            <a href="#" class="btn flex items-center justify-center pt-14">
+                download now
+                <svg width="2rem" height="1rem" id="root" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+                    <path
+                        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
+                        fill="#266df1" />
+                </svg>
+            </a>
+        </div>
+    </section>
+    <!-- End download block-->
 </body>
 
 </html>
