--- a/index.html
+++ b/index.html
@@ -39,18 +39,17 @@
     </section>
     <!-- End of menu link block -->
 
-    <section class="block-pad pt-[100px]">
+    <section class="block-pad pt-[50px] md:pt-[100px]">
         <div class="holder">
-            <div class="flex flex-col md:flex-row">
-                <div class="flex-none lg:w-1/2 lg:max-w-[600px] space-y-5">
+            <div class="grid grid-cols-1 lg:grid-cols-8 lg:gap-16 gap-8">
+                <div class="lg:col-span-4 md:order-1 space-y-5 ">
                     <p class="uppercase text-base leading-22 tracking-1.5">win Cash Prizes & Rewards!</p>
                     <h2 class="text-blue1 mt-5">Play and learn to enhance your personal scams resilience!</h2>
                     <div class="space-y-4">
-                        <p>Play #XiamTheScams from 24 Oct 2024 - 22 Jan 2025. Boost anti-scam skills in this life
-                            simulation. Make wise choices, avoid scams, and maximise well-being!</p>
+                        <p>Play #XiamTheScams from 24 Oct 2024 - 22 Jan 2025. Boost anti-scam skills in this life simulation. Make wise choices, avoid scams, and maximise well-being!</p>
                     </div>
                     <a href="#" class="btn flex items-center">
-                        Play Now!
+                        Play now!
                         <svg width="2rem" height="1rem" id="root" xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 448 512">
                             <path
@@ -60,7 +59,7 @@
                     </a>
                 </div>
 
-                <div class="flex-none lg:w-1/2 mt-6 md:mt-0 lg:ml-auto">
+                <div class="lg:col-span-4 space-y-4 lg:space-y-6 order-1">
                     <div class="aspect-w-16 aspect-h-9">
                         <img class="object-cover w-full h-full"
                             src="https://images.pexels.com/photos/7111619/pexels-photo-7111619.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -68,7 +67,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
     <!--    End text media block -->
@@ -103,6 +101,37 @@
         </div>
     </section>
     <!-- End download block-->
+    <section class="block-pad pt-[50px] md:pt-[100px]">
+        <div class="holder">
+            <div class="grid grid-cols-1 lg:grid-cols-8  lg:gap-16 gap-8">
+                <div class="lg:col-span-4 md:order-1 space-y-5">
+                    <p class="uppercase text-base leading-22 tracking-1.5">Unsure if it's a scam?</p>
+                    <h2 class="text-blue1 mt-5">Call and check with the ScamShield Helpline: 1799</h2>
+                    <div class="space-y-4">
+                        <p>Available 24/7, Monday to Sunday</p>
+                    </div>
+                    <a href="#" class="btn flex items-center">
+                        Play Now!
+                        <svg width="2rem" height="1rem" id="root" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path
+                                d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
+                                fill="#266df1" />
+                        </svg>
+                    </a>
+                </div>
+
+                <div class="lg:col-span-4 space-y-4 lg:space-y-6">
+                    <div class="aspect-w-16 aspect-h-9">
+                        <img class="object-cover w-full h-full"
+                            src="https://images.pexels.com/photos/7111619/pexels-photo-7111619.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    End text media block -->
 </body>
 
 </html>
