--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     <p class="uppercase text-base leading-22 tracking-1.5">win Cash Prizes & Rewards!</p>
                     <h2 class="text-blue1 mt-5">Play and learn to enhance your personal scams resilience!</h2>
                     <div class="space-y-4">
-                        <p>Play #XiamTheScams from 24 Oct 2024 - 22 Jan 2025. Boost anti-scam skills in this life simulation. Make wise choices, avoid scams, and maximise well-being!</p>
+                        <p>Play #XiamTheScams from 24 Oct 2024 - 22 Jan 2025. Boost anti-scam skills in this life
+                            simulation. Make wise choices, avoid scams, and maximise well-being!</p>
                     </div>
                     <a href="#" class="btn flex items-center">
                         Play now!
@@ -122,6 +123,36 @@
                 </div>
 
                 <div class="lg:col-span-4 space-y-4 lg:space-y-6">
+                    <div class="aspect-w-16 aspect-h-9">
+                        <img class="object-cover w-full h-full"
+                            src="https://images.pexels.com/photos/7111619/pexels-photo-7111619.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--    End text media block -->
+    <section class="block-pad pt-[50px] md:pt-[100px] bg-gray1">
+        <div class="holder">
+            <div class="grid grid-cols-1 lg:grid-cols-8  lg:gap-16 gap-8">
+                <div class="lg:col-span-4 md:order-1 space-y-5 ">
+                    <h2 class="text-blue1">Scams Bulletin</h2>
+                    <div class="space-y-4">
+                        <p>Learn about the latest scam trends from the Police's Monthly Scams Bulletin.</p>
+                    </div>
+                    <a href="#" class="btn flex items-center">
+                        Read Now
+                        <svg width="2rem" height="1rem" id="root" xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 448 512">
+                            <path
+                                d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
+                                fill="#266df1" />
+                        </svg>
+                    </a>
+                </div>
+
+                <div class="lg:col-span-4 space-y-4 lg:space-y-6 order-1">
                     <div class="aspect-w-16 aspect-h-9">
                         <img class="object-cover w-full h-full"
                             src="https://images.pexels.com/photos/7111619/pexels-photo-7111619.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
