news block added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
     <!-- End of menu link block -->
 
-    <section class="block-pad pt-[50px] md:pt-[100px]">
+    <section class="block-pad ">
         <div class="holder">
             <div class="grid grid-cols-1 lg:grid-cols-8 lg:gap-16 gap-8">
                 <div class="lg:col-span-4 md:order-1 space-y-5 ">
@@ -102,7 +102,7 @@
         </div>
     </section>
     <!-- End download block-->
-    <section class="block-pad pt-[50px] md:pt-[100px]">
+    <section class="block-pad  ">
         <div class="holder">
             <div class="grid grid-cols-1 lg:grid-cols-8  lg:gap-16 gap-8">
                 <div class="lg:col-span-4 md:order-1 space-y-5">
@@ -133,7 +133,7 @@
         </div>
     </section>
     <!--    End text media block -->
-    <section class="block-pad pt-[50px] md:pt-[100px] bg-gray1">
+    <section class="block-pad bg-gray1">
         <div class="holder">
             <div class="grid grid-cols-1 lg:grid-cols-8  lg:gap-16 gap-8">
                 <div class="lg:col-span-4 md:order-1 space-y-5 ">
@@ -163,6 +163,45 @@
         </div>
     </section>
     <!--    End text media block -->
+
+    <section class="block-pad">
+        <div class="holder">
+            <div class="text-center space-y-4">
+                <p class="uppercase text-base leading-22 tracking-1.5">stay informed</p>
+                <h2 class="text-blue1">Scam threats</h2>
+                <p>Singapore lost $651.8 million to scams in 2023 across 50,376 cases</p>
+            </div>
+
+            <div class="flex flex-col md:flex-row flex-wrap justify-center items-start gap-8 pt-12 w-full">
+                <div
+                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-[#484848] rounded border border-solid border-[#d0d5dd] bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-[#f9f9f9]">
+                    <h3>Investment scam</h3>
+                    <p> ~$50,700 lost per case</p>
+                    <a href="#" class="btn !text-base">Learn more</a>
+                </div>
+                <div
+                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-[#484848] rounded border border-solid border-[#d0d5dd] bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-[#f9f9f9]">
+                    <h3>Investment scam</h3>
+                    <p> ~$50,700 lost per case</p>
+                    <a href="#" class="btn !text-base">Learn more</a>
+                </div>
+                <div
+                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-[#484848] rounded border border-solid border-[#d0d5dd] bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-[#f9f9f9]">
+                    <h3>Investment scam</h3>
+                    <p> ~$50,700 lost per case</p>
+                    <a href="#" class="btn !text-base">Learn more</a>
+                </div>
+                <div
+                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-[#484848] rounded border border-solid border-[#d0d5dd] bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-[#f9f9f9]">
+                    <h3>Investment scam</h3>
+                    <p> ~$50,700 lost per case</p>
+                    <a href="#" class="btn !text-base">Learn more</a>
+                </div>
+            </div>
+
+        </div>
+    </section>
+    <!-- End news block -->
 </body>
 
 </html>
