add video block

--- a/index.html
+++ b/index.html
@@ -174,25 +174,25 @@
 
             <div class="flex flex-col md:flex-row flex-wrap justify-center items-start gap-8 pt-12 w-full">
                 <div
-                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-[#484848] rounded border border-solid border-[#d0d5dd] bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-[#f9f9f9]">
+                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-black2 rounded border border-solid border-gray2 bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-gray3">
                     <h3>Investment scam</h3>
                     <p> ~$50,700 lost per case</p>
                     <a href="#" class="btn !text-base">Learn more</a>
                 </div>
                 <div
-                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-[#484848] rounded border border-solid border-[#d0d5dd] bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-[#f9f9f9]">
+                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-black2 rounded border border-solid border-gray2 bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-gray3">
                     <h3>Investment scam</h3>
                     <p> ~$50,700 lost per case</p>
                     <a href="#" class="btn !text-base">Learn more</a>
                 </div>
                 <div
-                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-[#484848] rounded border border-solid border-[#d0d5dd] bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-[#f9f9f9]">
+                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-black2 rounded border border-solid border-gray2 bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-gray3">
                     <h3>Investment scam</h3>
                     <p> ~$50,700 lost per case</p>
                     <a href="#" class="btn !text-base">Learn more</a>
                 </div>
                 <div
-                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-[#484848] rounded border border-solid border-[#d0d5dd] bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-[#f9f9f9]">
+                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-black2 rounded border border-solid border-gray2 bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-gray3">
                     <h3>Investment scam</h3>
                     <p> ~$50,700 lost per case</p>
                     <a href="#" class="btn !text-base">Learn more</a>
@@ -202,6 +202,27 @@
         </div>
     </section>
     <!-- End news block -->
+
+    <section class="block-pad bg-gray1">
+        <div class="holder">
+            <div class="text-center space-y-4">
+                <p class="uppercase text-base leading-22 tracking-1.5">Launch video</p>
+                <h2 class="text-blue1">ScamShield Suite</h2>
+            </div>
+
+            <div class="flex justify-center items-center pt-4">
+
+                <iframe allowfullscreen=""
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    frameborder="0" title="YouTube video player"
+                    src="https://www.youtube.com/embed/bIAo--B3V3A?si=HbSi2zskpEC_07oR" height="360"
+                    width="640"></iframe>
+
+            </div>
+
+        </div>
+    </section>
+    <!-- End video block block -->
 </body>
 
 </html>
