--- a/index.html
+++ b/index.html
@@ -223,6 +223,68 @@
         </div>
     </section>
     <!-- End video block block -->
+
+    <section class="block-pad">
+        <div class="holder">
+            <div class="text-center space-y-4">
+                <p class="uppercase text-base leading-22 tracking-1.5">Anti-Scam efforts</p>
+                <h2 class="text-blue1">Highlights</h2>
+            </div>
+
+            <div class="flex flex-col pt-12">
+
+                <div class="flex flex-col lg:flex-row items-start  p-6 border-y border-gray4 gap-4">
+                    <div class="flex-none w-full lg:w-1/3 space-y-2">
+                        <h3>CPF Withdrawal Limit Reduced</h3>
+                        <p>22 August 2024</p>
+                    </div>
+                    <div class="flex-grow space-y-4">
+                        <p>
+                            Online CPF withdrawal limit reduced from S$200,000 to S$50,000 per day to reduce scam
+                            losses.
+                        </p>
+                        <a href="#" class="btn" style="font-weight: inherit; font-style: inherit;">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+
+
+                <div class="flex flex-col lg:flex-row items-start  p-6 border-b border-gray4 gap-4">
+                    <div class="flex-none w-full lg:w-1/3 space-y-2">
+                        <h3>CPF Withdrawal Limit Reduced</h3>
+                        <p>22 August 2024</p>
+                    </div>
+                    <div class="flex-grow space-y-4">
+                        <p>
+                            Online CPF withdrawal limit reduced from S$200,000 to S$50,000 per day to reduce scam
+                            losses.
+                        </p>
+                        <a href="#" class="btn" style="font-weight: inherit; font-style: inherit;">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+
+                <div class="flex flex-col lg:flex-row items-start  p-6 border-b border-gray4 gap-4">
+                    <div class="flex-none w-full lg:w-1/3 space-y-2">
+                        <h3>CPF Withdrawal Limit Reduced</h3>
+                        <p>22 August 2024</p>
+                    </div>
+                    <div class="flex-grow space-y-4">
+                        <p>
+                            Online CPF withdrawal limit reduced from S$200,000 to S$50,000 per day to reduce scam
+                            losses.
+                        </p>
+                        <a href="#" class="btn" style="font-weight: inherit; font-style: inherit;">
+                            Learn more
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+    </section>
+    <!-- End news pdf block -->
 </body>
 
 </html>
