--- a/index.html
+++ b/index.html
@@ -164,45 +164,6 @@
     </section>
     <!--    End text media block -->
 
-    <section class="block-pad">
-        <div class="holder">
-            <div class="text-center space-y-4">
-                <p class="uppercase text-base leading-22 tracking-1.5">stay informed</p>
-                <h2 class="text-blue1">Scam threats</h2>
-                <p>Singapore lost $651.8 million to scams in 2023 across 50,376 cases</p>
-            </div>
-
-            <div class="flex flex-col md:flex-row flex-wrap justify-center items-start gap-8 pt-12 w-full">
-                <div
-                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-black2 rounded border border-solid border-gray2 bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-gray3">
-                    <h3>Investment scam</h3>
-                    <p> ~$50,700 lost per case</p>
-                    <a href="#" class="btn !text-base">Learn more</a>
-                </div>
-                <div
-                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-black2 rounded border border-solid border-gray2 bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-gray3">
-                    <h3>Investment scam</h3>
-                    <p> ~$50,700 lost per case</p>
-                    <a href="#" class="btn !text-base">Learn more</a>
-                </div>
-                <div
-                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-black2 rounded border border-solid border-gray2 bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-gray3">
-                    <h3>Investment scam</h3>
-                    <p> ~$50,700 lost per case</p>
-                    <a href="#" class="btn !text-base">Learn more</a>
-                </div>
-                <div
-                    class="w-full sm:max-w-[90%] md:max-w-[40%] flex flex-col items-start gap-4 flex-grow flex-shrink-0 basis-0 self-start text-black2 rounded border border-solid border-gray2 bg-white shadow-shadow1 p-[calc(6rem/4)] cursor-pointer hover:bg-gray3">
-                    <h3>Investment scam</h3>
-                    <p> ~$50,700 lost per case</p>
-                    <a href="#" class="btn !text-base">Learn more</a>
-                </div>
-            </div>
-
-        </div>
-    </section>
-    <!-- End news block -->
-
     <section class="block-pad bg-gray1">
         <div class="holder">
             <div class="text-center space-y-4">
@@ -231,56 +192,36 @@
                 <h2 class="text-blue1">Highlights</h2>
             </div>
 
-            <div class="flex flex-col pt-12">
+            <div class="flex flex-wrap  md:flex-row flex-col justify-center items-start text-left gap-8 w-full pt-8">
 
-                <div class="flex flex-col lg:flex-row items-start  p-6 border-y border-gray4 gap-4">
-                    <div class="flex-none w-full lg:w-1/3 space-y-2">
-                        <h3>CPF Withdrawal Limit Reduced</h3>
-                        <p>22 August 2024</p>
-                    </div>
-                    <div class="flex-grow space-y-4">
-                        <p>
-                            Online CPF withdrawal limit reduced from S$200,000 to S$50,000 per day to reduce scam
-                            losses.
-                        </p>
-                        <a href="#" class="btn" style="font-weight: inherit; font-style: inherit;">
-                            Learn more
-                        </a>
-                    </div>
+                <div
+                    class="text-card flex flex-col items-start gap-4 self-stretch border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 lg:basis-0 lg:shrink-0 lg:grow lg:max-w-[40%] md:basis-[calc(50%-24px)] md:shrink-0 md:grow-0 md:max-w-[50%] w-full [&>*]:flex-grow hover:bg-gray3 hover:cursor-pointer [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
+                    <h3>Investment sca</h3>
+                    <p>~$50,700 lost per case</p>
+                    <a>Learn more</a>
                 </div>
 
-
-                <div class="flex flex-col lg:flex-row items-start  p-6 border-b border-gray4 gap-4">
-                    <div class="flex-none w-full lg:w-1/3 space-y-2">
-                        <h3>CPF Withdrawal Limit Reduced</h3>
-                        <p>22 August 2024</p>
-                    </div>
-                    <div class="flex-grow space-y-4">
-                        <p>
-                            Online CPF withdrawal limit reduced from S$200,000 to S$50,000 per day to reduce scam
-                            losses.
-                        </p>
-                        <a href="#" class="btn" style="font-weight: inherit; font-style: inherit;">
-                            Learn more
-                        </a>
-                    </div>
+                <div
+                    class="text-card flex flex-col items-start gap-4 self-stretch border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 lg:basis-0 lg:shrink-0 lg:grow lg:max-w-[40%] md:basis-[calc(50%-24px)] md:shrink-0 md:grow-0 md:max-w-[50%] w-full [&>*]:flex-grow hover:bg-gray3 hover:cursor-pointer [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
+                    <h3>Investment sca</h3>
+                    <p>~$50,700 lost per case</p>
+                    <a>Learn more</a>
                 </div>
 
-                <div class="flex flex-col lg:flex-row items-start  p-6 border-b border-gray4 gap-4">
-                    <div class="flex-none w-full lg:w-1/3 space-y-2">
-                        <h3>CPF Withdrawal Limit Reduced</h3>
-                        <p>22 August 2024</p>
-                    </div>
-                    <div class="flex-grow space-y-4">
-                        <p>
-                            Online CPF withdrawal limit reduced from S$200,000 to S$50,000 per day to reduce scam
-                            losses.
-                        </p>
-                        <a href="#" class="btn" style="font-weight: inherit; font-style: inherit;">
-                            Learn more
-                        </a>
-                    </div>
+                <div
+                    class="text-card flex flex-col items-start gap-4 self-stretch border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 lg:basis-0 lg:shrink-0 lg:grow lg:max-w-[40%] md:basis-[calc(50%-24px)] md:shrink-0 md:grow-0 md:max-w-[50%] w-full [&>*]:flex-grow hover:bg-gray3 hover:cursor-pointer [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
+                    <h3>Investment sca</h3>
+                    <p>~$50,700 lost per case</p>
+                    <a>Learn more</a>
                 </div>
+
+                <div
+                    class="text-card flex flex-col items-start gap-4 self-stretch border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 lg:basis-0 lg:shrink-0 lg:grow lg:max-w-[40%] md:basis-[calc(50%-24px)] md:shrink-0 md:grow-0 md:max-w-[50%] w-full [&>*]:flex-grow hover:bg-gray3 hover:cursor-pointer [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
+                    <h3>Investment sca</h3>
+                    <p>~$50,700 lost per case</p>
+                    <a>Learn more</a>
+                </div>
+
             </div>
 
     </section>
