card block grid col add

--- a/index.html
+++ b/index.html
@@ -192,31 +192,31 @@
                 <h2 class="text-blue1">Highlights</h2>
             </div>
 
-            <div class="flex flex-wrap  md:flex-row flex-col justify-center items-start text-left gap-8 w-full pt-8">
+            <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8 w-full pt-8">
 
                 <div
-                    class="text-card flex flex-col items-start gap-4 self-stretch border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 lg:basis-0 lg:shrink-0 lg:grow lg:max-w-[40%] md:basis-[calc(50%-24px)] md:shrink-0 md:grow-0 md:max-w-[50%] w-full [&>*]:flex-grow hover:bg-gray3 hover:cursor-pointer [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
+                    class=" flex flex-col items-start gap-4  border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 hover:bg-gray3 hover:cursor-pointer [&>p]:flex-grow [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
                     <h3>Investment sca</h3>
                     <p>~$50,700 lost per case</p>
                     <a>Learn more</a>
                 </div>
 
                 <div
-                    class="text-card flex flex-col items-start gap-4 self-stretch border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 lg:basis-0 lg:shrink-0 lg:grow lg:max-w-[40%] md:basis-[calc(50%-24px)] md:shrink-0 md:grow-0 md:max-w-[50%] w-full [&>*]:flex-grow hover:bg-gray3 hover:cursor-pointer [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
+                    class=" flex flex-col items-start gap-4  border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 hover:bg-gray3 hover:cursor-pointer [&>p]:flex-grow [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
                     <h3>Investment sca</h3>
                     <p>~$50,700 lost per case</p>
                     <a>Learn more</a>
                 </div>
 
                 <div
-                    class="text-card flex flex-col items-start gap-4 self-stretch border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 lg:basis-0 lg:shrink-0 lg:grow lg:max-w-[40%] md:basis-[calc(50%-24px)] md:shrink-0 md:grow-0 md:max-w-[50%] w-full [&>*]:flex-grow hover:bg-gray3 hover:cursor-pointer [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
+                    class=" flex flex-col items-start gap-4  border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 hover:bg-gray3 hover:cursor-pointer [&>p]:flex-grow [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
                     <h3>Investment sca</h3>
                     <p>~$50,700 lost per case</p>
                     <a>Learn more</a>
                 </div>
 
                 <div
-                    class="text-card flex flex-col items-start gap-4 self-stretch border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 lg:basis-0 lg:shrink-0 lg:grow lg:max-w-[40%] md:basis-[calc(50%-24px)] md:shrink-0 md:grow-0 md:max-w-[50%] w-full [&>*]:flex-grow hover:bg-gray3 hover:cursor-pointer [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
+                    class=" flex flex-col items-start gap-4  border border-gray2 bg-white shadow-shadow1 p-6 rounded-[4px] text-black2 hover:bg-gray3 hover:cursor-pointer [&>p]:flex-grow [&>a]:text-blue2 [&>a]:underline [&>a]:text-lg [&>a]:font-semibold [&>a]:leading-6 tracking-[0.017em]">
                     <h3>Investment sca</h3>
                     <p>~$50,700 lost per case</p>
                     <a>Learn more</a>
