text media block added

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 
     <section class="block-pad ">
         <div class="holder">
-            <div class="grid grid-cols-1 lg:grid-cols-8 lg:gap-16 gap-8">
-                <div class="lg:col-span-4 md:order-1 space-y-5 ">
+            <div class="grid md:grid-cols-2 md:items-center lg:items-start md:gap-16 gap-8">
+                <div class=" md:order-1 space-y-5 ">
                     <p class="uppercase text-base leading-22 tracking-1.5">win Cash Prizes & Rewards!</p>
                     <h2 class="text-blue1 mt-5">Play and learn to enhance your personal scams resilience!</h2>
                     <div class="space-y-4">
@@ -60,7 +60,7 @@
                     </a>
                 </div>
 
-                <div class="lg:col-span-4 space-y-4 lg:space-y-6 order-1">
+                <div class="space-y-4 lg:space-y-6 order-1">
                     <div class="aspect-w-16 aspect-h-9">
                         <img class="object-cover w-full h-full"
                             src="https://images.pexels.com/photos/7111619/pexels-photo-7111619.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -76,18 +76,18 @@
             <p class="text-center uppercase text-base leading-22 tracking-1.5">get scam protection</p>
             <h2 class="text-center text-blue1 mt-4">Stay safe with the enhanced ScamShield app</h2>
 
-            <div class="grid lg:grid-cols-3 gap-4 place-items-center text-center md:text-start pt-14">
-                <div class="space-y-6 max-w-[325px]">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-10 place-items-center text-center md:text-start pt-14">
+                <div class="space-y-4 lg:space-y-6 ">
                     <h3>Check for scams</h3>
                     <p>Know if a suspicious message, link, or number is likely a scam </p>
                 </div>
-                <div class="space-y-6 max-w-[325px]">
-                    <h3>Check for scams</h3>
-                    <p>Know if a suspicious message, link, or number is likely a scam </p>
+                <div class="space-y-4 lg:space-y-6 ">
+                    <h3>Report potential scams </h3>
+                    <p>Submit reports with screenshots, so we can monitor them better </p>
                 </div>
-                <div class="space-y-6 max-w-[325px]">
-                    <h3>Check for scams</h3>
-                    <p>Know if a suspicious message, link, or number is likely a scam </p>
+                <div class=" space-y-4 lg:space-y-6 ">
+                    <h3>Block and filter scams</h3>
+                    <p>Set up your phone to block calls and SMSes from scammers </p>
                 </div>
             </div>
 
@@ -102,17 +102,18 @@
         </div>
     </section>
     <!-- End download block-->
-    <section class="block-pad  ">
+    <section class="block-pad ">
         <div class="holder">
-            <div class="grid grid-cols-1 lg:grid-cols-8  lg:gap-16 gap-8">
-                <div class="lg:col-span-4 md:order-1 space-y-5">
-                    <p class="uppercase text-base leading-22 tracking-1.5">Unsure if it's a scam?</p>
-                    <h2 class="text-blue1 mt-5">Call and check with the ScamShield Helpline: 1799</h2>
+            <div class="grid md:grid-cols-2 md:items-center lg:items-start md:gap-16 gap-8">
+                <div class=" md:order-1 space-y-5 ">
+                    <p class="uppercase text-base leading-22 tracking-1.5">win Cash Prizes & Rewards!</p>
+                    <h2 class="text-blue1 mt-5">Play and learn to enhance your personal scams resilience!</h2>
                     <div class="space-y-4">
-                        <p>Available 24/7, Monday to Sunday</p>
+                        <p>Play #XiamTheScams from 24 Oct 2024 - 22 Jan 2025. Boost anti-scam skills in this life
+                            simulation. Make wise choices, avoid scams, and maximise well-being!</p>
                     </div>
                     <a href="#" class="btn flex items-center">
-                        Play Now!
+                        Play now!
                         <svg width="2rem" height="1rem" id="root" xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 448 512">
                             <path
@@ -122,7 +123,7 @@
                     </a>
                 </div>
 
-                <div class="lg:col-span-4 space-y-4 lg:space-y-6">
+                <div class="space-y-4 lg:space-y-6">
                     <div class="aspect-w-16 aspect-h-9">
                         <img class="object-cover w-full h-full"
                             src="https://images.pexels.com/photos/7111619/pexels-photo-7111619.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
@@ -135,14 +136,16 @@
     <!--    End text media block -->
     <section class="block-pad bg-gray1">
         <div class="holder">
-            <div class="grid grid-cols-1 lg:grid-cols-8  lg:gap-16 gap-8">
-                <div class="lg:col-span-4 md:order-1 space-y-5 ">
-                    <h2 class="text-blue1">Scams Bulletin</h2>
+            <div class="grid md:grid-cols-2 md:items-center lg:items-start md:gap-16 gap-8">
+                <div class=" md:order-1 space-y-5 ">
+                    <p class="uppercase text-base leading-22 tracking-1.5">win Cash Prizes & Rewards!</p>
+                    <h2 class="text-blue1 mt-5">Play and learn to enhance your personal scams resilience!</h2>
                     <div class="space-y-4">
-                        <p>Learn about the latest scam trends from the Police's Monthly Scams Bulletin.</p>
+                        <p>Play #XiamTheScams from 24 Oct 2024 - 22 Jan 2025. Boost anti-scam skills in this life
+                            simulation. Make wise choices, avoid scams, and maximise well-being!</p>
                     </div>
                     <a href="#" class="btn flex items-center">
-                        Read Now
+                        Play now!
                         <svg width="2rem" height="1rem" id="root" xmlns="http://www.w3.org/2000/svg"
                             viewBox="0 0 448 512">
                             <path
@@ -152,7 +155,7 @@
                     </a>
                 </div>
 
-                <div class="lg:col-span-4 space-y-4 lg:space-y-6 order-1">
+                <div class="space-y-4 lg:space-y-6 order-1">
                     <div class="aspect-w-16 aspect-h-9">
                         <img class="object-cover w-full h-full"
                             src="https://images.pexels.com/photos/7111619/pexels-photo-7111619.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
