--- a/index.html
+++ b/index.html
@@ -4,11 +4,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Scamwatch Ai</title>
     <link rel="stylesheet" href="src/output.css">
 </head>
 
 <body>
+
+    <header class="py-8">
+        <div class="holder">
+            <div class="flex items-center">
+                <div class="max-w-[100px]  md:max-w-[180px] w-full">
+                    <h1 class="siteLogo" title="Scamwatch Ai">
+                        <a href="index.html" class="block [&>svg]:max-w-full">
+                            <img src="assets/logo.png" alt="Scamwatch.ai">
+                        </a>
+                    </h1>
+                </div>
+
+                <div class="flex flex-wrap items-center mx-auto space-x-4 lg:space-x-7">
+                    <nav class="hidden min-[1200px]:block">
+                        <ul
+                            class="main--menu flex items-center gap-10 [&>li>a]:text-black3 [&>li>a]:text-base [&>li>a]:font-semibold [&>li>a]:font-lato [&>li>a]:uppercase [&>li>a]:leading-normal cursor-pointer [&>li>a]:relative [&>li>a]:flex [&>li>a]:items-center [&>li>a]:transition-all">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">I've been scammed</a></li>
+                            <li class="relative">
+                                <a href="#" aria-haspopup="true" aria-expanded="false">
+                                    Protection against scams
+                                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" fill="currentColor"
+                                        height="20" width="20">
+                                        <path
+                                            d="M201.4 374.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 306.7 86.6 169.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z" />
+                                    </svg>
+                                </a>
+                                <div class="navbar-dropdown">
+                                    <ul class="space-y-4">
+                                        <li><a href="#">Introduction to Scams</a></li>
+                                        <li><a href="#">Why do people fall prey to scams</a></li>
+                                        <li><a href="#">Stay safe with ScamShield</a></li>
+                                        <li><a href="#">More ways to protect yourself</a></li>
+                                        <li><a href="#">Understanding scam types</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li><a href="#">Trends & Updates</a></li>
+                            <li><a href="#">More</a></li>
+                        </ul>
+                    </nav>
+                </div>
+
+
+                <div class="ml-auto">
+                    <a href="#">
+                        <svg fill="#000000" width="25px" height="25px" viewBox="0 -0.24 28.423 28.423"
+                            id="_02_-_Search_Button" data-name="02 - Search Button" xmlns="http://www.w3.org/2000/svg">
+                            <path id="Path_215" data-name="Path 215"
+                                d="M14.953,2.547A12.643,12.643,0,1,0,27.6,15.19,12.649,12.649,0,0,0,14.953,2.547Zm0,2A10.643,10.643,0,1,1,4.31,15.19,10.648,10.648,0,0,1,14.953,4.547Z"
+                                transform="translate(-2.31 -2.547)" fill-rule="evenodd" />
+                            <path id="Path_216" data-name="Path 216"
+                                d="M30.441,28.789l-6.276-6.276a1,1,0,1,0-1.414,1.414L29.027,30.2a1,1,0,1,0,1.414-1.414Z"
+                                transform="translate(-2.31 -2.547)" fill-rule="evenodd" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+
+        </div>
+    </header>
+
+    <!-- End of header -->
 
     <section class="bg-center bg-no-repeat bg-cover h-[70vh] relative flex justify-center items-center"
         style="background-image: url(https://cdn.pixabay.com/photo/2022/01/07/15/49/scam-6922102_1280.png);">
